...
                }
            }

            Spacer(modifier = Modifier.height(10.dp))

            Text(
                text = "Bienvenido a iBichos",
                fontSize = 29.sp,
                fontWeight = FontWeight.Bold,
                color = Color(0xFF78A76D),
                textAlign = TextAlign.Center
            )

...
